# Trak-automations-platform

./: .gitignore  README.md  TRAK_AUTOMATIONS.md
apps/dashboard/: README.md  index.html  package-lock.json  package.json
apps/dashboard/src/: App.tsx  index.css  main.tsx
apps/dashboard/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/dashboard/src-tauri/capabilities/: default.json
apps/dashboard/src-tauri/src/: lib.rs
apps/dashboard/src/components/: AddClientModal.tsx  ClientConnectionRow.tsx  ConnectionCard.tsx  Sidebar.tsx  StrongholdGate.tsx  TopBar.tsx
docs/architecture/: MARKETING_SWARM.md  TERMINUS.md  TERMINUS_ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-28-phase-1-tauri-shell.md  2026-05-01-phase-10-overview.md  2026-05-01-phase-4-ingestion.md  2026-05-01-phase-5-dossier.md  2026-05-01-phase-6-approval.md  2026-05-01-phase-7-cron.md  2026-05-01-phase-8-reports.md  2026-05-01-phase-9-codesign.md
docs/superpowers/specs/: 2026-05-01-dossier-schema.md
prompts/01_keyword_serp_analyst/: system.md
prompts/02_technical_seo_auditor/: system.md
prompts/03_content_strategist/: system.md
prompts/04_onpage_optimizer/: system.md
prompts/05_link_strategist/: system.md
prompts/06_competitor_analyst/: system.md
prompts/07_strategy_synthesizer/: system.md
prompts/08_executor/: system.md
scripts/: install_launchd.sh  notarize.sh  uninstall_launchd.sh
workers/: pyproject.toml
workers/ingest/: _common.py  daily_run.py  dossier_builder.py  ga4.py  gsc.py  report_generator.py  swarm_orchestrator.py
(+18 files in other folders)
