[project]
name = "trak-workers"
version = "0.1.0"
description = "Daily ingestion + analysis workers for Trak Automations"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.30",
    "google-auth-oauthlib>=1.2",
    "google-api-python-client>=2.150",
    "reportlab>=4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingest*"]
